--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,88 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+html, body {
+    font-family: 'Poppins', sans-serif;
+    max-width: 100%;
+    max-height: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#login-page{
+    background: rgb(19,19,153);
+    background: -moz-linear-gradient(142deg, rgba(19,19,153,1) 8%, rgba(36,29,179,1) 31%, rgba(90,217,255,1) 84%);
+    background: -webkit-linear-gradient(142deg, rgba(19,19,153,1) 8%, rgba(36,29,179,1) 31%, rgba(90,217,255,1) 84%);
+    background: linear-gradient(142deg, rgba(19,19,153,1) 8%, rgba(36,29,179,1) 31%, rgba(90,217,255,1) 84%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#131399",endColorstr="#5ad9ff",GradientType=1);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#login-container{
+    width: 40em;
+    height: 30em;
+    padding: 1.5em;
+
+    background: rgba(255, 255, 255, 0.175);
+    border-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    border: 1px solid rgba(255, 255, 255, 0.33);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.seat {
+    background-color: #444451;
+    height: 19px;
+    width: 21px;
+    margin: 2px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.card {
-  padding: 2em;
+.seat:hover {
+    cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.seat.selected {
+    background-color: #6feaf6;
+}
+
+.seat.occupied {
+    background-color: #fff;
+}
+
+.seat.reserved{
+    background-color: #ffb923;
+}
+
+.seat.selected-example {
+    background-color: #6feaf6;
+}
+
+.seat.occupied-example {
+    background-color: #fff;
+}
+
+.seat.reserved-example{
+    background-color: #ffb923;
+}
+
+.screen {
+    background-color: #fff;
+    height: 70px;
+    width: 75%;
+    transform: rotateX(-45deg);
+    clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 10% 100%);
+}
+
+.aud-row{
+    background-color: #ffffffb7;
+    height: 19px;
+    width: 21px;
+    margin: 2px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
